# rs-linkscrapping

./: Cargo.toml  README.md  wordcollector.py
src/: main.rs
