[package]
name = "cvecrawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
log = "0.4.20"
reqwest = "0.11.24"
select = "0.6.0"
simple_logger = "4.3.3"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
voyager = "0.2.1"
